// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculateCostV1 > fixture: box perimeter 300x50, internal pitched roof, same geometry 1`] = `
{
  "cost_ex_gst": 10870.79,
  "cost_inc_gst": 12501.41,
  "notes_and_warnings": [
    "Acrylic joiner system assumed (no through-fixing).",
    "Flashing material not pricebooked yet; using $0/m placeholder (add real SKU/cost).",
  ],
  "warnings": [
    {
      "level": "info",
      "message": "Acrylic joiner system assumed (no through-fixing).",
    },
    {
      "level": "info",
      "message": "Flashing material not pricebooked yet; using $0/m placeholder (add real SKU/cost).",
    },
  ],
}
`;

exports[`calculateCostV1 > fixture: pitched, acrylic, 6m × 3m, black, soffit + deck posts, 2.4m 1`] = `
{
  "cost_ex_gst": 9281.23,
  "cost_inc_gst": 10673.41,
  "notes_and_warnings": [
    "Acrylic joiner system assumed (no through-fixing).",
    "Flashing material not pricebooked yet; using $0/m placeholder (add real SKU/cost).",
  ],
  "warnings": [
    {
      "level": "info",
      "message": "Acrylic joiner system assumed (no through-fixing).",
    },
    {
      "level": "info",
      "message": "Flashing material not pricebooked yet; using $0/m placeholder (add real SKU/cost).",
    },
  ],
}
`;
